# AUS1_semestralka

./: .gitignore  CMakeLists.txt  UzemnaJednotka.cpp  UzemnaJednotka.h  main.cpp
UzemnaJednotka/: UzemnaJednotka.h
criteriums/: Criterium.h  CriteriumName.cpp  CriteriumName.h  CriteriumNazov.cpp  CriteriumNazov.h  CriteriumPrislusnost.cpp  CriteriumPrislusnost.h  CriteriumString.h  CriteriumTyp.cpp  CriteriumTyp.h  CriteriumUzemnaJednotka.h  CriteriumVzdelaniePocet.cpp  CriteriumVzdelaniePocet.h  CriteriumVzdelaniePodiel.cpp  CriteriumVzdelaniePodiel.h
enums/: UzemnaJednotkaTyp.h  VekTyp.h  VzdelanieTyp.h
filters/: CompositeFilter.h  Filter.h  FilterAll.h  FilterAnd.h  FilterBetween.h  FilterEquals.h  FilterOr.h  FilterUzemnaJednotkaPrislusnost.h  FilterUzemnaJednotkaTyp.h  FilterVzdelaniePocet.h  FilterVzdelaniePodiel.h  FilterWithCriterium.h
input/: DataLoader.cpp  DataLoader.h
output/: ConsoleOutput.h  consoleOutput.h
sorting/: ShellSort.h
structures/: types.h
structures/_logger/: file_log_consumer.cpp  file_log_consumer.h
structures/array/: array.h
structures/list/: ArrayListWithObject.h  array_list.h  double_linked_list.h  linked_list.h  list.h
structures/matrix/: coherent_matrix.h  incoherent_matrix.h
structures/priority_queue/: heap.h  priority_queue_limited_sorted_array_list.h  priority_queue_linked_list.h  priority_queue_list.h  priority_queue_sorted_array_list.h  priority_queue_two_lists.h
structures/queue/: explicit_queue.h
structures/stack/: explicit_stack.h  implicit_stack.h
structures/table/: DuplicitySortedSequenceTable.h  binary_search_tree.h  sequence_table.h  sorted_sequence_table.h  table.h  treap.h  unsorted_sequence_table.h
structures/table/sorting/: heap_sort.h  insert_sort.h  sort.h
structures/tree/: binary_tree.h  k_way_tree.h  multi_way_tree.h  tree.h
structures/vector/: vector.cpp
uzemna_jednotka/: Kraj.cpp  Kraj.h  Obec.cpp  Obec.h  Okres.cpp  Okres.h  UzemnaJednotka.cpp  UzemnaJednotka.h
